Tue Oct 23 06:17:36 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Cache symbols while
	  tokenizing.  Thanks Kevin Menard!

Tue Oct 23 06:15:40 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Updated the RegExp to catch
	  Strings earlier in the tokenization process.  Thanks Kevin Menard!

Tue Oct 23 06:12:39 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: Handle nil tags specially
	  to avoid slow method_missing calls.  Thanks Kevin Menard!

Tue Oct 23 06:07:57 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Ignore bad timestamps.  If
	  something looks like a timestamp but has an invalid component, treat
	  it as a string instead of throwing an ArgumentError.
	  Thanks Rhett Sutphin!

	* test/psych/test_scalar_scanner.rb: appropriate tests.

Tue Oct 23 06:04:07 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Fix scalar_scanner to
	  understand strings starting with an underscore and containing only
	  digits.  Thanks Kelley Reynolds.

	* test/psych/test_scalar_scanner.rb: test for fix

Tue Oct 23 06:00:41 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: Changed comment in psych.rb to update new
	  home page for libyaml.  Thanks to Carolyn Ann.

Sun Oct 21 19:12:59 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h (rb_vm_t::trace_running): add a new field
	  `trace_running' to store vm global tracing status.

	* vm_trace.c: fix SEGV bug. event_hook was free'd
	  even when the hook is still used in another thread.
	  [ruby-dev:46141] [Bug #7032]

Sun Oct 21 19:12:42 2012  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_core.h (rb_vm_t::trace_flag): remove `trace_flag'
	  which is no longer used.

Sun Oct 21 18:34:27 2012  Tadayoshi Funaba  <tadf@dotrb.org>
